# BFFs

./: .gitignore  README.md  manage.py  pyproject.toml
.github/workflows/: testcode.yml
BFFs/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
alarm/: apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
community/: admin.py  models.py  serializers.py  tests.py  urls.py  validators.py  views.py
docker/: Dockerfile  docker-compose.yml
docker/nginx/: default.conf
feed/: admin.py  cron.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
meetai/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
user/: admin.py  cron.py  jwt_tokenserializer.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
user/templates/: email.html  email.txt  password_reset_complete.html  password_reset_done.html  password_reset_form.html  verfication.html
